--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    // RxJava & RxAndroid
+    compile 'io.reactivex:rxjava:1.1.3'
+    compile 'io.reactivex:rxandroid:1.1.0'
 }
 repositories {
     mavenCentral()
