--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    daggerVersion ="2.6"
+    retrofitVersion="2.0.0"
+    picassoVersion="2.5.2"
+    rxJavaVersion="1.1.3"
+    rxAndroidVersion="1.1.0"
+}
