--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:percent:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
