--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     compile "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
     provided 'javax.annotation:jsr250-api:1.0'
+
+    // Bus
+    compile 'com.squareup:otto:1.3.8'
 }
 repositories {
     mavenCentral()
