--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.brandonhogan.kotlintest"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -44,6 +44,10 @@ dependencies {
 
     // Picasso
     compile "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 
     // RxJava & RxAndroid
     compile "io.reactivex:rxjava:$rootProject.ext.rxJavaVersion"
