added permissions for the gradlew

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,7 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-22
     
+before_install:
+ - chmod +x gradlew
+ 
 script: ./gradlew
